Add Turbo and modal component

--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -29,3 +29,4 @@
 @import 'world/modules/sponsors';
 @import 'world/modules/sponsorship';
 @import 'world/modules/back_to_top';
+@import 'world/modules/modal';
