--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -59,6 +59,11 @@
 
   <script src="/assets/world/scripts/back_to_top.js" defer></script>
   <script src="/assets/world/scripts/carousel.js" defer></script>
+  <script src="/assets/world/scripts/modal_component.js" defer></script>
+
+  <script type="module">
+    import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+  </script>
 
   <link rel="icon" href="/assets/images/favicon.ico" />
   <link rel="apple-touch-icon" type="image/png" href="/assets/images/apple-touch-icon.png" />
