Disable turbo for nav links

--- a/_includes/world/header.html
+++ b/_includes/world/header.html
@@ -1,4 +1,4 @@
-<header>
+<header data-turbo="false">
   <nav class="nav">
     <a href="/world" class="nav__logo">
       <img src="/assets/world/rails-world-logo.png" alt="Rails World Logo">
