Present session info in a modal

--- a/_layouts/world/agenda.html
+++ b/_layouts/world/agenda.html
@@ -6,11 +6,28 @@ layout: world/default
   <h1>Agenda</h1>
   <p>Explore two full days of Rails World, featuring keynotes, talks, workshops, sessions and more. (Note: A conference app where you can build and save your schedule will be launched soon.)</p>
 
-  {% include world/agenda/tabs.html %}
+  <turbo-frame id="agenda" data-turbo-action="advance">
+    {% include world/agenda/tabs.html %}
+    <br>
 
-  <br>
+    <small>Schedule is in Central European Summer Time (CEST)</small>
 
-  <small>Schedule is in Central European Summer Time (CEST)</small>
-
-  {{ content }}
+    {{ content }}
+  </turbo-frame>
 </content-container>
+
+<modal-component>
+  <modal-mask></modal-mask>
+  <turbo-frame
+    id="session_details" target="_top" class="session"
+    role="dialog" aria-modal="true" aria-labelledby="session_title" tabindex="-1">
+  </turbo-frame>
+</modal-component>
+
+<script type="text/javascript">
+  document.addEventListener("turbo:frame-load", ({ target }) => {
+    if (target.id === "agenda") {
+      target.querySelector("a:not([role='tab'])").focus()
+    }
+  })
+</script>
