--- a/_includes/world/agenda/items.html
+++ b/_includes/world/agenda/items.html
@@ -1,12 +1,25 @@
 <ul class="agenda__items">
   {% for session in sessions %}
+    {% assign base_id = session.path | split: '/' | last | remove_first: '.md' %}
+    {% assign time_id = base_id | append: '_time' %}
+    {% assign details_id = base_id | append: '_details' %}
     <li>
-      <h3 class="session__time">{{ session.time }}</h3>
+      <p
+        id="{{ time_id }}"
+        class="session__time">{{ session.time }}</p>
       <div>
-        <h3><a href="{{ session.url }}">{{ session.title }}</a></h3>
+        <h3 aria-describedby="{{ time_id }} {{ details_id }}">
+          <a
+            href="{{ session.url }}"
+            data-turbo-frame="session_details"
+            data-turbo-action="advance"
+            data-turbo-preserve-focus>
+            {{ session.title }}
+          </a>
+        </h3>
         {% assign filteredSpeakers = site.world_speakers | where_exp:"speaker", "speaker.path contains session.speaker" %}
         {% assign speaker = filteredSpeakers | first %}
-        <p>{{ speaker.first_name }} {{ speaker.last_name }}, {{ speaker.role }}{% if speaker.company %}, {{ speaker.company }}{% endif %}</p>
+        <p id="{{ details_id }}">{{ speaker.first_name }} {{ speaker.last_name }}, {{ speaker.role }}{% if speaker.company %}, {{ speaker.company }}{% endif %}</p>
       </div>
     </li>
   {% endfor %}
