--- a/assets/css/world.scss
+++ b/assets/css/world.scss
@@ -30,3 +30,4 @@
 @import 'world/modules/sponsorship';
 @import 'world/modules/back_to_top';
 @import 'world/modules/modal';
+@import 'world/modules/breadcrumbs';
