create speaker turbo frame and modal

--- a/_layouts/world/session.html
+++ b/_layouts/world/session.html
@@ -101,7 +101,7 @@ layout: world/default
         </article>
       </bordered-container>
 
-      <button class="close hidden" aria-label="Close speaker dialog">
+      <button class="close hidden" aria-label="Close session dialog">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" d="M2 2L22 22"></path>
           <path stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" d="M22 2L2 22"></path>
