add calendar icon

--- a/_layouts/world/session.html
+++ b/_layouts/world/session.html
@@ -47,7 +47,7 @@ layout: world/default
               <br>
               <ul>
                 <li>{% include world/icons/clock.html %} {{ page.time }}</li>
-                <li>{{ sessionDate }}</li>
+                <li>{% include world/icons/calendar.html %} {{ sessionDate }}</li>
                 <li>{% include world/icons/pin-purple.html %} {{ page.location }}</li>
               </ul>
             </section>
