--- a/_layouts/world/session.html
+++ b/_layouts/world/session.html
@@ -7,8 +7,9 @@ layout: world/default
 {% assign day_url = page.url | split: '/' | pop | join: '/' %}
 {% assign day = day_url | slice: -1 | prepend: 'Day ' %}
 {% assign dayNum = day_url | slice: -1 | plus: 0 %}
-{% assign sessionDate = dayNum | plus: 3 | append: 'th October 2023' %}
 
+<!-- add 3 to the day of conference to obtain the date in october -->
+{% assign sessionDate = dayNum | plus: 3 | append: 'th October 2023' %}
 
 <content-container class="session">
   <breadcrumbs-container data-turbo="false" aria-label="Breadcrumbs">
