tweak design of session page and agenda description

--- a/_layouts/world/agenda.html
+++ b/_layouts/world/agenda.html
@@ -4,7 +4,8 @@ layout: world/default
 
 <content-container class="agenda">
   <h1>Agenda</h1>
-  <p>Explore two full days of Rails World, featuring keynotes, talks, workshops, sessions and more. (Note: A conference app where you can build and save your schedule will be launched soon.)</p>
+  <p>Explore two full days of Rails World, featuring keynotes, talks, workshops, sessions and more.</p>
+  <small>(Note: A conference app where you can build and save your schedule will be launched soon.)</small>
 
   <turbo-frame id="agenda" data-turbo-action="advance">
     {% include world/agenda/tabs.html %}
