--- a/_sass/world/modules/_speaker_card.scss
+++ b/_sass/world/modules/_speaker_card.scss
@@ -28,6 +28,7 @@ speaker-card {
     padding-bottom: var(--space-small);
     color: var(--red);
     text-align: center;
+    line-height: 120%;
   }
 
   p {
