hide agenda link and update speaker carousel on home page

--- a/_layouts/world/speaker.html
+++ b/_layouts/world/speaker.html
@@ -57,7 +57,7 @@ layout: world/default
             </section>
 
 
-            <section class="speaker__sessions">
+            <section class="speaker__sessions hidden">
               <h2>Sessions</h2>
               <ul>
               {% for session in filteredSessions %}
