--- a/_layouts/world/session.html
+++ b/_layouts/world/session.html
@@ -60,13 +60,21 @@ layout: world/default
                 <br>
 
                 <flex-container>
-                  <a href="{{ speaker.url }}">
+                  <a
+                    href="{{ speaker.url }}"
+                    data-turbo-frame="speaker_details"
+                    data-turbo-action="advance"
+                    data-turbo-preserve-focus>
                     {% include world/icons/microphone.html %}
                   </a>
                   <div>
-                    <a href="{{ speaker.url }}">
-                      <h3>{{ speaker.first_name }} {{ speaker.last_name }}</h3>
-                    </a>
+                    <a
+                    href="{{ speaker.url }}"
+                    data-turbo-frame="speaker_details"
+                    data-turbo-action="advance"
+                    data-turbo-preserve-focus>
+                    <h3>{{ speaker.first_name }} {{ speaker.last_name }}</h3>
+                  </a>
                     <p class="session__speaker__role">
                       {{ speaker.role }} of {{ speaker.company }}
                     </p>
@@ -123,3 +131,11 @@ layout: world/default
     </content-card>
   </turbo-frame>
 </content-container>
+
+<modal-component>
+  <modal-mask></modal-mask>
+  <turbo-frame
+    id="speaker_details" target="_top" class="speaker"
+    role="dialog" aria-modal="true" aria-labelledby="speaker_name" tabindex="-1">
+  </turbo-frame>
+</modal-component>
