--- a/_layouts/world/session.html
+++ b/_layouts/world/session.html
@@ -12,7 +12,7 @@ layout: world/default
 {% assign sessionDate = dayNum | plus: 3 | append: 'th October 2023' %}
 
 <content-container class="session">
-  <breadcrumbs-container data-turbo="false" aria-label="Breadcrumbs">
+  <breadcrumbs-container aria-label="Breadcrumbs">
     <ol>
       <li>
         <a href="/world">World</a>
