--- a/_layouts/world/speaker.html
+++ b/_layouts/world/speaker.html
@@ -56,8 +56,8 @@ layout: world/default
                 </div>
             </section>
 
-
-            <section class="speaker__sessions hidden">
+            {% if false %}
+            <section class="speaker__sessions">
               <h2>Sessions</h2>
               <ul>
               {% for session in filteredSessions %}
@@ -72,6 +72,7 @@ layout: world/default
               {% endfor %}
               </ul>
             </section>
+            {% endif %}
           </article>
       </bordered-container>
 
