--- a/_includes/world/head.html
+++ b/_includes/world/head.html
@@ -1,5 +1,5 @@
 {% if page.title %}
-  {% assign title = page.title %}
+  {% assign title = site.world_title | append: ' &mdash; ' | append: page.title %}
 {% else %}
   {% assign title = site.world_title %}
 {% endif %}
@@ -19,7 +19,7 @@
 {% assign url = page.url  | absolute_url %}
 
 <head>
-  <title>{{ site.world_title }} &mdash; {% if page.title %}{{ page.title }}{% else %}{{ page.description }}{% endif %}</title>
+  <title>{{ title }}</title>
   <meta charset="utf-8" />
   <meta content="ie=edge" http-equiv="x-ua-compatible" />
   <meta name="handheldfriendly" content="true" />
