--- a/_sass/world/modules/_speakers.scss
+++ b/_sass/world/modules/_speakers.scss
@@ -8,15 +8,15 @@
   &__gallery {
     padding-top: var(--space-medium);
     display: flex;
-    gap: var(--space-medium);
+    gap: var(--space-small);
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
 
     a {
       display: inline;
 
       &:hover {
-        text-decoration-color: var(--red);
+        text-decoration: none;
 
         img {
           box-shadow: 0px 0px 35.2822px 13.8px var(--orange-brown);
@@ -24,23 +24,22 @@
       }
     }
 
-    h3 {
-      font-size: var(--type-large);
-      line-height: 125%;
-    }
-
     speaker-card {
-      width: 11.5em;
+      width: 12em;
 
       img {
         --size: 7em;
       }
 
       p {
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
         font-size: var(--type-xxx-small);
+      }
+
+      &:hover {
+        h3 {
+          text-decoration: underline;
+          text-decoration-color: var(--red);
+        }
       }
     }
   }
