--- a/_includes/world/speaker-card.html
+++ b/_includes/world/speaker-card.html
@@ -3,7 +3,7 @@
     <div class="speaker-card__content">
       <img src="{{ speaker.image_path }}" alt="{{ speaker.first_name }}'s Avatar" loading="lazy">
       <div class="speaker-card__text">
-        <h3>{{ speaker.first_name }} {{ speaker.last_name }}</h3>
+        <h3>{{ speaker.first_name }}<br>{{ speaker.last_name }}</h3>
         <p>{{ speaker.role }}</p>
         <p>{{ speaker.company }}</p>
       </div>
