--- a/_sass/world/modules/_speaker.scss
+++ b/_sass/world/modules/_speaker.scss
@@ -9,7 +9,10 @@
 
   p {
     font-size: var(--type-x-small);
-    padding-bottom: var(--space-large);
+  }
+
+  p ~ p {
+    margin-top: var(--space-small);
   }
 
   &__info {
