Fix tab accessibility on safari

--- a/_includes/world/agenda/tabs.html
+++ b/_includes/world/agenda/tabs.html
@@ -6,7 +6,7 @@
       role="tab"
       aria-selected="{% if page.day == 'day-0' %}true{% else %}false{% endif %}"
       aria-labelledby="agenda_day_0_date">
-      <h2 id="agenda_day_0_date" aria-hidden="{% if page.day == 'day-0' %}false{% else %}true{% endif %}">Wednesday, October 4th</h2>
+      <h2 id="agenda_day_0_date" aria-hidden="true">Wednesday, October 4th</h2>
     </a>
   </li>
 
@@ -16,8 +16,8 @@
       href="/world/agenda/day-1"
       role="tab"
       aria-selected="{% if page.day == 'day-1' %}true{% else %}false{% endif %}"
-      aria-labelledby="agenda_day_1">
-      <h2 id="agenda_day_1_date" aria-hidden="{% if page.day == 'day-1' %}false{% else %}true{% endif %}">Thursday, October 5th</h2>
+      aria-labelledby="agenda_day_1_date">
+      <h2 id="agenda_day_1_date" aria-hidden="true">Thursday, October 5th</h2>
     </a>
   </li>
 
@@ -27,8 +27,8 @@
       href="/world/agenda/day-2"
       role="tab"
       aria-selected="{% if page.day == 'day-2' %}true{% else %}false{% endif %}"
-      aria-labelledby="agenda_day_2">
-      <h2 id="agenda_day_2_date" aria-hidden="{% if page.day == 'day-2' %}false{% else %}true{% endif %}">Friday, October 6th</h2>
+      aria-labelledby="agenda_day_2_date">
+      <h2 id="agenda_day_2_date" aria-hidden="true">Friday, October 6th</h2>
     </a>
   </li>
 </ul>
