update agenda tab styles

--- a/_includes/world/agenda/tabs.html
+++ b/_includes/world/agenda/tabs.html
@@ -6,7 +6,10 @@
       role="tab"
       aria-selected="{% if page.day == 'day-0' %}true{% else %}false{% endif %}"
       aria-labelledby="agenda_day_0_date">
-      <h2 id="agenda_day_0_date" aria-hidden="true">Wednesday, October 4th</h2>
+      <hgroup id="agenda_day_0_date" aria-hidden="true">
+        <h2>Wednesday</h2>
+        <h2>October 4th</h2>
+      </hgroup>
     </a>
   </li>
 
@@ -17,7 +20,10 @@
       role="tab"
       aria-selected="{% if page.day == 'day-1' %}true{% else %}false{% endif %}"
       aria-labelledby="agenda_day_1_date">
-      <h2 id="agenda_day_1_date" aria-hidden="true">Thursday, October 5th</h2>
+      <hgroup id="agenda_day_1_date" aria-hidden="true">
+        <h2>Thursday</h2>
+        <h2>October 5th</h2>
+      </hgroup>
     </a>
   </li>
 
@@ -28,7 +34,10 @@
       role="tab"
       aria-selected="{% if page.day == 'day-2' %}true{% else %}false{% endif %}"
       aria-labelledby="agenda_day_2_date">
-      <h2 id="agenda_day_2_date" aria-hidden="true">Friday, October 6th</h2>
+      <hgroup id="agenda_day_2_date" aria-hidden="true">
+        <h2>Friday</h2>
+        <h2>October 6th</h2>
+      </hgroup>
     </a>
   </li>
 </ul>
